--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.8"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
     "electron": "^4.1.0",
     "electron-packager": "^13.1.1",
