--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   },
   "homepage": "https://github.com/NISHI3/escape-proxy-electron#readme",
   "dependencies": {
-    "vue": "^2.6.8"
+    "vue": "^2.6.8",
+    "typescript": "^3.3.3333",
+    "electron": "^4.1.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.1",
-    "electron": "^4.1.0",
     "electron-packager": "^13.1.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "ts-loader": "^5.3.3"
   }
 }
