--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^2.1.1",
     "electron-packager": "^13.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "js-yaml": "^3.13.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
