--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
+    "electron-json-storage": "^4.1.6",
     "electron-packager": "^13.1.1",
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.13.0",
     "node-sass": "^4.11.0",
+    "request": "^2.88.0",
     "sass-loader": "^7.1.0",
+    "socks5-client": "^1.2.6",
+    "socks5-http-client": "^1.0.4",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "url-loader": "^1.1.2",
