--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "webpack": "webpack",
     "start": "webpack --mode development && electron dist",
-    "build-macOS": "webpack --mode production && NODE_ENV=production electron-packager dist EP --platform=darwin --arch=x64 --overwrite --ignore=node_modules && chmod -R  a+x EP-darwin-x64/EP.app/Contents/Resources/app/bin/",
-    "build-windows": "webpack --mode production && NODE_ENV=production electron-packager dist EP --platform=win32 --arch=x64 --overwrite --ignore=node_modules"
+    "build-macOS": "webpack --mode production && NODE_ENV=production electron-packager dist CERES --platform=darwin --arch=x64 --overwrite --ignore=node_modules && chmod -R  a+x CERES-darwin-x64/CERES.app/Contents/Resources/app/bin/",
+    "build-windows": "webpack --mode production && NODE_ENV=production electron-packager dist CERES --platform=win32 --arch=x64 --overwrite --ignore=node_modules"
   },
   "repository": {
     "type": "git",
