Macでアイコンを設定できるようにした

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "webpack": "webpack",
     "start": "webpack --mode development && electron dist",
-    "build-macOS": "webpack --mode production && NODE_ENV=production electron-packager dist CERES --platform=darwin --arch=x64 --overwrite --ignore=node_modules && chmod -R  a+x CERES-darwin-x64/CERES.app/Contents/Resources/app/bin/",
+    "build-macOS": "webpack --mode production && NODE_ENV=production electron-packager dist CERES --platform=darwin --arch=x64 --overwrite --ignore=node_modules --icon=asset/mac-icon.icns && chmod -R  a+x CERES-darwin-x64/CERES.app/Contents/Resources/app/bin/",
     "build-windows": "webpack --mode production && NODE_ENV=production electron-packager dist CERES --platform=win32 --arch=x64 --overwrite --ignore=node_modules"
   },
   "repository": {
