--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
-    "start": "webpack --mode development && electron dist",
+    "start": "webpack --mode development && chmod -R a+x dist/bin && electron dist",
     "build-macOS": "webpack --mode production && NODE_ENV=production electron-packager dist CERES --platform=darwin --arch=x64 --overwrite --ignore=node_modules --icon=asset/mac-icon.icns && chmod -R  a+x CERES-darwin-x64/CERES.app/Contents/Resources/app/bin/ &&  npm run build-dmg",
-    "build-windows": "webpack --mode production && NODE_ENV=production electron-packager dist CERES --platform=win32 --arch=x64 --overwrite --ignore=node_modules",
+    "build-windows": "webpack --mode production && set NODE_ENV=production && electron-packager dist CERES --platform=win32 --arch=x64 --overwrite --ignore=node_modules",
     "build-dmg": "cp asset/settings.py CERES-darwin-x64/ && cd CERES-darwin-x64/ && dmgbuild -s settings.py -D app=CERES.app \"CERES PROXY\" CERES.dmg"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "electron-json-storage": "^4.1.6",
     "electron-packager": "^13.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "iconv-lite": "^0.4.24",
     "js-yaml": "^3.13.0",
     "node-sass": "^4.11.0",
     "request": "^2.88.0",
@@ -40,6 +41,7 @@
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "url-loader": "^1.1.2",
+    "uuid": "^3.3.2",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.6",
