--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "tar": ">=2.2.2"
   }
 }
